--- a/Projects/06.OmniFood/index.html
+++ b/Projects/06.OmniFood/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!-- Always include this to support media queries on mobile -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- ****************************************************** -->
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -12,11 +14,12 @@
     />
     <link rel="stylesheet" href="css/general.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/queries.css" />
 
     <title>Omnifood</title>
   </head>
   <body>
-    <header class="header">
+    <header class="header nav-open">
       <a href="#">
         <img src="img/omnifood-logo.png" alt="omnifood logo" class="logo" />
       </a>
@@ -30,6 +33,11 @@
           <li><a href="#" class="main-nav-link nav-cta">Try for free</a></li>
         </ul>
       </nav>
+
+      <button class="btn-mobile-nav">
+        <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
+        <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
+      </button>
     </header>
 
     <main>
@@ -66,7 +74,7 @@
             </div>
           </div>
 
-          <div class="hero-image-box">
+          <div class="hero-img-box">
             <img
               src="img/hero.png"
               class="hero-img"
