Feat: Natours - Advanced CSS

--- a/Projects/06.OmniFood/index.html
+++ b/Projects/06.OmniFood/index.html
@@ -65,7 +65,7 @@
             </p>
 
             <a href="#cta" class="btn btn--full margin-right-sm"
-              >Strat eating well</a
+              >Start eating well</a
             >
             <a href="#how" class="btn btn--outline">Learn more &darr;</a>
 
@@ -121,7 +121,7 @@
         <div class="container">
           <span class="subheading">How it works</span>
           <h2 class="heading-secondary">
-            Your daily dose of thealth in 3 smple steps
+            Your daily dose of health in 3 smple steps
           </h2>
         </div>
 
@@ -498,7 +498,7 @@
             </ul>
 
             <div class="plan-sign-up">
-              <a href="#" class="btn btn--full">Strat eating well</a>
+              <a href="#" class="btn btn--full">Start eating well</a>
             </div>
           </div>
 
@@ -529,7 +529,7 @@
             </ul>
 
             <div class="plan-sign-up">
-              <a href="#" class="btn btn--full">Strat eating well</a>
+              <a href="#" class="btn btn--full">Start eating well</a>
             </div>
           </div>
         </div>
@@ -594,7 +594,7 @@
 
               <form action="#" class="cta-form">
                 <div>
-                  <label for="full-name">Full Name</label>
+                  <label for="full-name">Full name</label>
                   <input
                     id="full-name"
                     type="text"
